update close button and styles

--- a/src/app/common/components/modals/ContactUsModal/ContactUsModal.styles.scss
+++ b/src/app/common/components/modals/ContactUsModal/ContactUsModal.styles.scss
@@ -6,7 +6,7 @@
     &.ant-modal {
         .ant-modal-content {
             @include mut.full-rounded(20px, $overflow: visible);
-            padding: f.pxToRem(24px) f.pxToRem(40px);
+            @include mut.rem-padded(0px);
             box-shadow: 0 7px 11px 2px rgba(0, 0, 0, 0.25);
         }
         .ant-modal-close {
@@ -27,6 +27,10 @@
 @media screen and (max-width: 1024px) {
     .contactUsModal {
         @include mut.sizedImportant(90%, 498px);
+
+        .formWrapper {
+            @include mut.rem-margined($top: 0px);
+        }
         
         &.ant-modal {
             .ant-modal-close {
