--- a/src/app/common/components/modals/ContactUsModal/ContactUsModal.styles.scss
+++ b/src/app/common/components/modals/ContactUsModal/ContactUsModal.styles.scss
@@ -10,7 +10,7 @@
             box-shadow: 0 7px 11px 2px rgba(0, 0, 0, 0.25);
         }
         .ant-modal-close {
-            @include mut.positioned-as(absolute, $left: 94%, $top: -25px);
+            @include mut.positioned-as(absolute, $right: -26px, $top: -26px);
             @include mut.circular(80px, c.$pure-white-color);
     
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -34,6 +34,7 @@
         
         &.ant-modal {
             .ant-modal-close {
+                @include mut.positioned-as($position: absolute, $right: -17px, $top: -17px);
                 @include mut.sizedImportant(60px, 60px);
                 @include mut.circular(65px, c.$pure-white-color);
 
@@ -49,7 +50,7 @@
     .contactUsModal {
         &.ant-modal {
             .ant-modal-close {
-                @include mut.positioned-as($position: absolute, $left: 92.36%, $top: -13px);
+                @include mut.positioned-as($position: absolute, $right: -11px, $top: -11px);
                 @include mut.sizedImportant(40px, 40px);
                 @include mut.circular(65px, c.$pure-white-color);
         
