--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
@@ -57,13 +57,24 @@
         @include mut.flex-centered();
 
         @media (min-width: 768px) and (max-width: 1024px) {
-            @include mut.sized(100%, 338px);
-            border-bottom: 0px !important;
+            @include mut.sized(100%, 355px);
         }
 
         @media screen and (max-width: 767px) {
-            @include mut.sized(100%, 398px);
-            border-bottom: 0px !important;
+            @include mut.sized(100%, 414px);
+        }
+    }
+
+    .skeleton{
+        background: #F4F4F4;
+        background: linear-gradient(90deg, #F4F4F4 8%, #F9F9F9 18%, #F4F4F4 33%);
+        border-radius: 5px;
+        background-size: 200% 100%;
+        animation: 1.5s shine linear infinite;
+    }
+    @keyframes shine {
+        to {
+            background-position-x: -200%;
         }
     }
 
