--- a/src/app/common/components/ContactForm/ContactForm.styles.scss
+++ b/src/app/common/components/ContactForm/ContactForm.styles.scss
@@ -152,6 +152,19 @@
         .captchaBlock {
             @include mut.flexed($direction: column, $justify-content: center, $align-items: center);
         }
+
+        .required-captcha {
+            position: relative;
+        }
+        .required-captcha::before {
+            content: '*';
+            position: absolute;
+            top: f.pxToRem(0);
+            left:  f.pxToRem(-8px);
+            transform: translate(-50%, -50%);
+            color: red;
+            @include mut.sizedImportant(8px, 8px);
+        }
     }
 }
 
