--- a/src/app/common/components/modals/ContactUsModal/ContactUsModal.styles.scss
+++ b/src/app/common/components/modals/ContactUsModal/ContactUsModal.styles.scss
@@ -6,11 +6,11 @@
     &.ant-modal {
         .ant-modal-content {
             @include mut.full-rounded(20px, $overflow: visible);
-            padding: f.pxToRem(24px) f.pxToRem(40px);
+            @include mut.rem-padded(0px);
             box-shadow: 0 7px 11px 2px rgba(0, 0, 0, 0.25);
         }
         .ant-modal-close {
-            @include mut.positioned-as(absolute, $left: 94%, $top: -25px);
+            @include mut.positioned-as(absolute, $right: -26px, $top: -26px);
             @include mut.circular(80px, c.$pure-white-color);
     
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -27,9 +27,14 @@
 @media screen and (max-width: 1024px) {
     .contactUsModal {
         @include mut.sizedImportant(90%, 498px);
+
+        .formWrapper {
+            @include mut.rem-margined($top: 0px);
+        }
         
         &.ant-modal {
             .ant-modal-close {
+                @include mut.positioned-as($position: absolute, $right: -17px, $top: -17px);
                 @include mut.sizedImportant(60px, 60px);
                 @include mut.circular(65px, c.$pure-white-color);
 
@@ -45,7 +50,7 @@
     .contactUsModal {
         &.ant-modal {
             .ant-modal-close {
-                @include mut.positioned-as($position: absolute, $left: 92.36%, $top: -13px);
+                @include mut.positioned-as($position: absolute, $right: -11px, $top: -11px);
                 @include mut.sizedImportant(40px, 40px);
                 @include mut.circular(65px, c.$pure-white-color);
         
