- add extra submit on deleting slide - fix size of art preview card

--- a/src/features/AdminPage/NewStreetcode/StreetcodeArtsBlock/components/DownloadStyles.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/StreetcodeArtsBlock/components/DownloadStyles.styles.scss
@@ -19,3 +19,14 @@
 .art-gallery-download{
     margin-bottom: pxToRem(10px);
 }
+
+.streetcode-art-preview{
+    width: 100%;
+    height: 100%;
+
+    & > *{
+        width: 100%;
+        height: 100%;
+    }
+}
+
