--- a/src/features/AdditionalPages/NewsPage/News.styles.scss
+++ b/src/features/AdditionalPages/NewsPage/News.styles.scss
@@ -67,6 +67,7 @@
             margin-bottom: f.pxToRem(20px);
             margin-left: f.pxToRem(20px);
             height: auto;
+            max-height: 40rem;
             object-fit: contain;
             max-width: f.pxToRem(600px);
             float: right;
