Fixed the amount buttons and input in donates modal

--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -23,6 +23,7 @@ $normal-darker-gray-color: #7E7E7E !important;
 $dark-red-color: #891F16 !important;
 $accented-red-color: #E04031 !important;
 $text-red-color: #A4271B !important;
+$button-border-red-color: #8D1F16 !important;
 $ant-menu-color: #E13F30 !important;
 $ant-menu-text-color:#ff4d4f!important;
 
