--- a/src/assets/sass/mixins/_utils.mixins.scss
+++ b/src/assets/sass/mixins/_utils.mixins.scss
@@ -173,6 +173,15 @@
   color: $color;
   background-color: $bg-color;
 }
+
+@mixin admin-page-base-layout(){
+  margin-top: f.pxToRem(100px);
+  display: flex;
+  float: left;
+  width: 100%;
+  padding: 0 f.pxToRem(32px);
+  gap: f.pxToRem(10px);
+}
 // --------------------------Text----------------------------------
 @mixin withLineHeight($line-height){
   line-height:f.pxToRem($line-height);
