--- a/src/features/AdminPage/PartnersPage/Partners.styles.scss
+++ b/src/features/AdminPage/PartnersPage/Partners.styles.scss
@@ -4,20 +4,15 @@
 @use "@sass/_utils.functions.scss" as f;
 
 .partners-page{
-    padding-top: f.pxToRem(100px);
-    display: flex;
-    gap: f.pxToRem(10px);
-    .partners-page-add-button{
-        min-height: f.pxToRem(50px);
-        min-width: f.pxToRem(120px);
-    }
+    @include mut.admin-page-base-layout();
+
     .container-justify-end{
         display: flex;
         justify-content: end;
     }
     .partners-page-container{
         @include mut.sized(80%);
-        
+
         .partners-table-logo{
             height: f.pxToRem(40px);
             margin: 0;
