--- a/src/features/AdminPage/StreetcodesTable/SearchMenu.styles.scss
+++ b/src/features/AdminPage/StreetcodesTable/SearchMenu.styles.scss
@@ -4,7 +4,7 @@
 @use "@sass/_utils.functions.scss" as f;
 
 .searchMenu {
-    margin: 10px;
+    margin: 0 10px 10px 10px;
     @include mut.sized(100%);
 
     .searchMenuElement {
@@ -22,7 +22,7 @@
 
     .ant-select-selector, .ant-input-affix-wrapper, .ant-input-number {
         @include mut.with-font($font-size: 16px);
-        
+
         &:hover {
             border-color: c.$accented-red-color;
         }
