--- a/src/features/ProgressBar/ProgressBarSection/ProgressBarSection.styles.scss
+++ b/src/features/ProgressBar/ProgressBarSection/ProgressBarSection.styles.scss
@@ -11,7 +11,7 @@
   background-color: c.$pure-white-color;
   border: 2px solid c.$lighter-gray-color;
   @include vnd.vendored(transform, 'rotate(45deg)');
-
+  transition: all .2s ease;
   &.active {
     @include mut.sized(32px, 32px);
     border-width: 3px !important;
