--- a/src/app/common/components/Editor/QEditor.styles.scss
+++ b/src/app/common/components/Editor/QEditor.styles.scss
@@ -1,19 +1,27 @@
 @use "@sass/_utils.functions.scss" as f;
 
 .ql-toolbar button {
-    height: f.pxToRem(28px) !important;
-    width: f.pxToRem(32px) !important;
+    height: f.pxToRem(26px) !important;
+    width: f.pxToRem(30px) !important;
 }
 
 .quillEditor {
     margin-bottom: f.pxToRem(35px);
 }
 
-.charsCounter {
+.editorInfoContainer {
+    display: flex;
+    flex-direction: row;
     padding-top: f.pxToRem(10px);
+    gap: f.pxToRem(50px);
+    transition: margin-left 0.3s ease;
+}
+
+.charsCounter {
+    max-width: fit-content;
     font-size: 14px;
     font-weight: bold;
-    text-align: end;
+    margin-left: auto;
 }
 
 .quillEditor .ql-editor u {
@@ -22,4 +30,11 @@
 
 .quillEditor .ql-editor s {
     text-decoration: line-through;
+}
+
+.validateLabelDescription {
+    max-width: fit-content;
+    // margin-right: auto;
+    color: red;
+    font-size: 14px;
 }
