Fixed indents in news page (#1099)
* Fixed indents in news page

* Fixed bug with indents for tinymce texts

* Fixed bug with improper indents

* Renamed utility

* Fixed styles with indents - for fans modal

--- a/src/features/AdditionalPages/NewsPage/News.styles.scss
+++ b/src/features/AdditionalPages/NewsPage/News.styles.scss
@@ -45,10 +45,9 @@
         .newsTextArea {
             @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
             overflow-wrap: break-word;
+            white-space: pre-line;
 
             p {
-                padding-bottom: f.pxToRem(24px);
-
                 strong {
                     @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500);
                 }
@@ -79,6 +78,7 @@
         @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 20px);
         @include mut.flexed($justify-content: space-between, $align-items: center);
         line-height: f.pxToRem(14px);
+        padding-top: f.pxToRem(24px);
         text-align: center;
         text-decoration: underline;
         text-decoration-color: c.$dark-red-color;
@@ -155,6 +155,7 @@
         }
 
         .newsTextArea {
+            white-space: pre-line;
             @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
         }
 
@@ -199,6 +200,7 @@
         }
 
         .newsTextArea {
+            white-space: pre-line;
             @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 16px);
         }
 
