--- a/src/features/MainPage/TeamSlider/TeamItemSlider/TeamItemSlider.styles.scss
+++ b/src/features/MainPage/TeamSlider/TeamItemSlider/TeamItemSlider.styles.scss
@@ -4,9 +4,7 @@
 @use "@sass/_utils.functions.scss" as f;
 
 .slick-slide {
-
     .teamItemSlider {
-        $isCentered: &.slick-center;
 
         @media (min-width: 768px) and (max-width: 1024px) {
             margin-bottom: f.pxToRem(30px);
@@ -17,21 +15,10 @@
             @include mut.rem-padded($top: 0px, $right: 0px, $bottom: 0px, $left: 0px);
             @include mut.sized(309px, 478px);
             @include mut.full-rounded(50px);
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
             line-height: f.pxToRem(23px);
             background-color: c.$pure-white-color;
             margin-left: f.pxToRem(20px);
-
-            //@media (min-width: 768px) and (max-width: 1024px) {
-            //        margin-top: f.pxToRem(18px);
-            //        @include mut.sized(266px, 402px);
-            //        padding-bottom: f.pxToRem(20px);
-            //}
-
-            @media screen and (max-width: 767px) {
-                @include mut.sized(310px, 475px);
-                margin-left: f.pxToRem(0px);
-            }
         }
 
         .leftSlider {
@@ -40,14 +27,6 @@
             justify-content: center;
             background-color: c.$pure-white-color;
             justify-self: flex-start;
-
-            //@media (min-width: 768px) and (max-width: 1024px) {
-            //    @include mut.sized(250px, 338px);
-            //}
-
-            @media screen and (max-width: 767px) {
-                @include mut.sized(294px, 398px);
-            }
         }
 
         .leftSliderContent {
@@ -57,33 +36,12 @@
             margin-right: f.pxToRem(10px);
             @include mut.full-rounded(50px);
             @include mut.flex-centered();
-
-            //@media (min-width: 768px) and (max-width: 1024px) {
-            //    @include mut.sized(100%, 338px);
-            //    margin: 0px;
-            //}
-
-            @media screen and (max-width: 767px) {
-                @include mut.sized(100%, 398px);
-                margin: f.pxToRem(8px);
-            }
         }
 
         .teamImg {
             @include mut.sized(290px, 310px);
             overflow: visible !important;
             object-fit: cover;
-
-            //@media (min-width: 768px) and (max-width: 1024px) {
-            //    @include mut.sized(250px, 338px);
-            //}
-            // @media (min-width: 768px) and (max-width: 1024px) {
-            //    @include mut.sized(100%, 100%);
-            //}
-
-            @media screen and (max-width: 767px) {
-                @include mut.sized(100%, 100%);
-            }
         }
 
         .rightSlider {
@@ -95,31 +53,12 @@
             flex: 1 1 auto;
             position: relative;
             height: f.pxToRem(148px);
-
-            //@media (min-width: 768px) and (max-width: 1024px) {
-            //    padding-top: 0%;
-            //}
-
-            @media screen and (max-width: 767px) {
-                padding-top: 0%;
-            }
         }
 
         .headerTeamContainer {
+            @include mut.sized(100%, 148px);
             box-sizing: border-box;
-            width: 100%;
             text-align: center;
-            height: f.pxToRem(148px);
-
-            //@media screen and (max-width: 1024px) {
-            //    .textContainer {
-            //        width: 100%;
-            //        height: 100%;
-            //        text-align: center;
-            //    }
-            //
-            //    @include mut.rem-padded(0px, 0px, 0px, 0px);
-            //}
         }
 
         .textContainer {
@@ -130,21 +69,14 @@
             @include mut.with-font(ft.$closer-text-font, $font-weight: 510, $font-size: 24px);
             color: c.$lighter-black-color;
             line-height: f.pxToRem(24px);
-            margin-top: f.pxToRem(10px);
-
-            //@media screen and (max-width: 1024px) {
-            //    margin-top: f.pxToRem(6px);
-            //    margin-bottom: f.pxToRem(4px);
-            //    @include mut.with-font(ft.$roboto-font, $font-weight: 510, $font-size: 20px);
-            //    line-height: f.pxToRem(23px);
-            //}
+            margin-top: f.pxToRem(20px);
         }
 
         .teamItemDescription {
             width: 100%;
             @include mut.rem-margined(10px, 0px, 0px, 0px);
             @include mut.rem-padded(0px, 5px, 0px, 0px);
-            line-height: 23px;
+            line-height: f.pxToRem(23px);
             max-height: f.pxToRem(214px);
             overflow: auto;
             color: c.$lighter-black-color;
@@ -154,15 +86,6 @@
                 display: none;
             }
 
-            //@media screen and (max-width: 1024px) {
-            //    color: c.$sliders-text-lighter-grey-color;
-            //    @include mut.with-font(ft.$roboto-font, $font-weight: 300, $font-size: 15px);
-            //    line-height: f.pxToRem(18px);
-            //    width: 55%;
-            //    text-align: center;
-            //    margin: 0 auto 20px auto !important;
-            //    word-wrap: break-word;
-            //}
         }
 
         .teamLinkItems {
@@ -180,50 +103,67 @@
                 height: 24px;
             }
 
-            @media screen and (max-width: 1024px) {
-                @if .slick-slide:not() {
-                    display: none;
-                    margin-top: f.pxToRem(4px);
-                    @include mut.with-font(ft.$roboto-font, $font-weight: 500, $font-size: 20px);
-                    line-height: f.pxToRem(23px);
-                }
-            }
         }
     }
 }
 
-//@media (min-width: 768px) and (max-width: 1024px) {
-//    .slick-slide.slick-center {
-//        transform: scale(1);
-//        transition: transform 1s ease;
-//
-//        .itemTeam {
-//            @include mut.flexed(row, center, center, wrap);
-//            @include mut.rem-padded($top: 0px, $right: 0px, $bottom: 0px, $left: 0px);
-//            @include mut.sized(309px, 478px);
-//            @include mut.full-rounded(50px);
-//            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-//            line-height: f.pxToRem(23px);
-//            background-color: c.$pure-white-color;
-//            margin-left: f.pxToRem(20px);
-//        }
-//
-//        .leftSlider {
-//            @include mut.full-rounded(53px);
-//            display: flex;
-//            justify-content: center;
-//            background-color: c.$pure-white-color;
-//            justify-self: flex-start;
-//        }
-//        .teamImg {
-//            @include mut.sized(290px, 310px);
-//            overflow: visible !important;
-//            object-fit: cover;
-//        }
-//
-//        .teamLinkItems {
-//            display: flex;
-//        }
-//
-//    }
-//}
+@media (min-width: 768px) and (max-width: 1024px) {
+    .slick-slide:not(.slick-center) {
+        .itemTeam {
+            margin-top: f.pxToRem(18px);
+            @include mut.sized(266px, 402px);
+        }
+
+        .leftSlider {
+            @include mut.sized(250px, 338px);
+        }
+
+        .leftSliderContent {
+            background-color: c.$pure-white-color;
+            @include mut.full-rounded(50px);
+            @include mut.flex-centered();
+            @include mut.sized(100%, 398px);
+            margin: f.pxToRem(8px);
+        }
+
+        .teamImg {
+            @include mut.sized(250px, 338px);
+            overflow: visible !important;
+            object-fit: cover;
+        }
+
+        .rightSlider {
+            padding-top: 0;
+        }
+
+        .teamItemTitle {
+                margin-top: f.pxToRem(6px);
+                margin-bottom: f.pxToRem(5px);
+                @include mut.with-font(ft.$roboto-font, $font-weight: 510, $font-size: 12px);
+                line-height: f.pxToRem(14px);
+        }
+
+        .headerTeamContainer {
+            .textContainer {
+                @include mut.sized(100%, 100%);
+                text-align: center;
+            }
+            @include mut.rem-padded(0px, 0px, 0px, 0px);
+        }
+
+        .teamItemDescription {
+            color: c.$sliders-text-lighter-grey-color;
+            @include mut.with-font(ft.$roboto-font, $font-weight: 300, $font-size: 12px);
+            line-height: f.pxToRem(13px);
+            width: 55%;
+            text-align: center;
+            margin: 0 auto 20px auto !important;
+            word-wrap: break-word;
+        }
+
+        .teamLinkItems {
+            display: none;
+        }
+
+    }
+}
